--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
   },
   "dependencies": {
     "@prisma/client": "5.13.0",
+    "@tanstack/react-query": "^5.32.0",
+    "@trpc/client": "11.0.0-rc.354",
+    "@trpc/next": "11.0.0-rc.354",
+    "@trpc/react-query": "11.0.0-rc.354",
+    "@trpc/server": "11.0.0-rc.354",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "superjson": "^2.2.1",
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
